--- a/倒排索引.md
+++ b/倒排索引.md
@@ -1,19 +1,12 @@
 
 **全文检索(Full-text Search)**：即先建立索引，再对索引进行搜索（倒排索引）。索引是从非结构化数据中提取出之后重新组织的信息。
+
 构建倒排索引的几个主要步骤：
 (1) 收集待建索引的文档；
 (2) 对这些文档中的文本进行词条化；
 (3) 对第2步产生的词条进行语言学预处理，得到**词项**；
 (4) 根据**词项**对所有文档建立索引。 
 
-
-
-
-基于上面谈到的原因，二元词索引并非标准的解决方案。实际中更常用的一种方式是采用所谓的位置信息索引（positional index，简称位置索引）。在这种索引中，对每个词项，以如下方式存储倒排记录
-
-![图片](https://mmbiz.qpic.cn/mmbiz_png/5fknb41ib9qEkpef92EuDauK6TMoQeqAxEl07VRGugzdlibkEfdKA3wAxnYmhDYAiaQnVib682hxZ93CWMmFK5HvxQ/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1)
-
-**单词be的文档频率是178239，在文档1中出现2次，位置分别是17、25。**
 
 
 ![lucene的一般过程.png](https://segmentfault.com/img/remote/1460000021695249)
@@ -41,13 +34,18 @@
 1. **变为小写(Lowercase)。**
 2. **将单词缩减为词根形式，如"cars"到"car"等。这种操作称为：stemming。** “缩减 采取某种固定的算法来做这种缩减，如去除“s”，去除“ing”加“e”，将“ational”变为“ate”，将“tional”变为“tion”。
 3. **将单词转变为词根形式，如"drove"到"drive"等。这种操作称为：lemmatization。**“转变”的方式 采用保存某种字典的方式做这种转变。比如字典中有“driving”到“drive”，“drove”到“drive”，“am, is, are”到“be”的映射，做转变时，只要查字典就可以了。
-** 二元词索引**
+4** 二元词索引**
 
 处理短语查询的一个办法就是将文档中每个接续词对看成一个短语。例如，文本 Friends,Romans, Countrymen 会产生如下的二元接续词对<Friends,Romans>,<Romans, Countrymen>
 
 如果索引中包含变长的词序列，通常就称为短语索引（phrase index）。实际上，利用二元词索引来处理单个词的查询不太方便（必须要扫描整个词汇表来发现包含该查询词的二元词），因此同时还需要有基于单个词的索引。尽管总有可能得到错误的匹配结果，但是在长度为3或者更长的索引短语上发生匹配错误的可能性实际上却很小。然而在另一方面，存储更长的短语很可能会大大增加词汇表的大小。穷尽所有长度超过2的短语并维护其索引绝对是一件令人生畏的事情，即使只穷尽所有的二元词也会大大增加词汇表的大小。
 
 为处理短语查询，仍然需要访问各个词项的倒排记录表。像以往一样，这里可以采用最小文档频率优先的策略，从而可以限制后续合并的候选词项的数目。在合并操作中，同样可以采用前面提到的各种技术来实现，**但是这里不只是简单地判断两个词项是否出现在同一文档中，而且还需要检查它们出现的位置关系和查询短语的一致性。这就需要计算出词之间的偏移距离。**
+基于上面谈到的原因，二元词索引并非标准的解决方案。实际中更常用的一种方式是采用所谓的位置信息索引（positional index，简称位置索引）。在这种索引中，对每个词项，以如下方式存储倒排记录
+
+![图片](https://mmbiz.qpic.cn/mmbiz_png/5fknb41ib9qEkpef92EuDauK6TMoQeqAxEl07VRGugzdlibkEfdKA3wAxnYmhDYAiaQnVib682hxZ93CWMmFK5HvxQ/640?wx_fmt=png&wxfrom=5&wx_lazy=1&wx_co=1)
+
+**单词be的文档频率是178239，在文档1中出现2次，位置分别是17、25。**
 
 现在用户应该只想搜出文档 2 出来. 基于"位置信息索引"方式, 我们可以做到这一点.这种搜索方法类似于**k词近邻搜索 —— a /k b**
 
